--- a/DemoClient/DemoClient.csproj
+++ b/DemoClient/DemoClient.csproj
@@ -1,21 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{1578A5AA-1DC1-42C6-AFF5-0EB278960881}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{4E58329B-D8B3-4169-97B6-F501E7B04D07}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Smpp.Net.Client</RootNamespace>
-    <AssemblyName>JamaaTech.Smpp.Net.Client.v1.4</AssemblyName>
+    <RootNamespace>DemoClient</RootNamespace>
+    <AssemblyName>DemoClient</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,20 +24,17 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>Jamaa Smpp Client.snk</AssemblyOriginatorKeyFile>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -44,30 +42,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConnectionStateChangedEventArgs.cs" />
-    <Compile Include="MessageEventArgs.cs" />
-    <Compile Include="MessageFactory.cs" />
+    <Compile Include="ISmppConfiguration.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SendMessageCallBack.cs" />
-    <Compile Include="ShortMessage.cs" />
-    <Compile Include="SmppClient.cs" />
-    <Compile Include="SmppClientException.cs" />
-    <Compile Include="SmppConnectionProperties.cs" />
-    <Compile Include="SmppConnectionState.cs" />
-    <Compile Include="StateChangedEventArgs.cs" />
-    <Compile Include="TextMessage.cs" />
+    <Compile Include="SmppConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="License.txt" />
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\JamaaTech.Smpp.Net.Client\Smpp.Net.Client.csproj">
+      <Project>{1578a5aa-1dc1-42c6-aff5-0eb278960881}</Project>
+      <Name>Smpp.Net.Client</Name>
+    </ProjectReference>
     <ProjectReference Include="..\JamaaTech.SMPP.Net.Lib\Smpp.Net.Lib.csproj">
-      <Project>{181F2022-E0DD-415E-BBBA-7C5E0303AAF8}</Project>
+      <Project>{181f2022-e0dd-415e-bbba-7c5e0303aaf8}</Project>
       <Name>Smpp.Net.Lib</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Jamaa Smpp Client.snk" />
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
