--- a/jamaatech.smpp.nuspec
+++ b/jamaatech.smpp.nuspec
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>JamaaTech.Smpp</id>
-    <version>1.4.3</version>
+    <id>JamaaTech.Smpp15</id>
+    <version>1.5</version>
     <title>Jamaa SMPP Client</title>
     <authors>JamaaTech</authors>
     <owners>JamaaTech</owners>
@@ -10,6 +10,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Jamaa SMPP Client is a .NET implementation of the SMPP protocol that focuses on providing an easy-to-use and robust SMPP client library for .NET developers. This project is intended to be used by developers who want to integrate SMS functionalities in their applications as well as students who are learning the SMPP protocol.</description>
     <tags>.net smpp</tags>
+    <copyright>Jamaa Technologies</copyright>
   </metadata>
   <files>
     <file src="lib\JamaaTech.Smpp.Net*.*" target="lib" exclude="**\*.exe" />    
