change nuget package id

--- a/JamaaSMPP.nuspec
+++ b/JamaaSMPP.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>JamaaTech.Smpp15</id>
+    <id>JamaaSMPP</id>
     <version>1.5</version>
     <title>Jamaa SMPP Client</title>
     <authors>JamaaTech</authors>
