Remove suffix v1.4 from assembly name

--- a/JamaaTech.SMPP.Net.Lib/Smpp.Net.Lib.csproj
+++ b/JamaaTech.SMPP.Net.Lib/Smpp.Net.Lib.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>JamaaTech.Smpp.Net.Lib</RootNamespace>
-    <AssemblyName>JamaaTech.Smpp.Net.Lib.v1.4</AssemblyName>
+    <AssemblyName>JamaaTech.Smpp.Net.Lib</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
