--- a/DemoClient/app.config
+++ b/DemoClient/app.config
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <system.diagnostics>
+    <trace autoflush="true" indentsize="4">
+      <listeners>
+        <add name="myListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="TextWriterOutput.log" />
+        <add name="EventLogListener" type="System.Diagnostics.EventLogTraceListener" initializeData="SmppClientDemo" />
+        <remove name="Default" />
+      </listeners>
+    </trace>
+    <switches>
+      <add name="SmppClientSwitch" value="4" />
+      <add name="SendSmPDUSwitch" value="4" />
+      <add name="SmppClientSessionSwitch" value="4" />
+      <add name="StreamParserSwitch" value="4" />
+    </switches>
+  </system.diagnostics>
+
   <startup>
-    
-  <supportedRuntime version="v2.0.50727"/></startup>   
+    <supportedRuntime version="v2.0.50727"/>
+  </startup>
 </configuration>
