DemoClient added UseSeparateConnections

--- a/DemoClient/app.config
+++ b/DemoClient/app.config
@@ -23,6 +23,7 @@
     <add key="SmppConfiguration.Encoding" value="UCS2" />
     <!-- None, DeliveryReceipt, DeliveryReceiptFailure, DeliveryAcknoledgement, ManualAcknoledgement, IntermediateNotification-->
     <add key="SmppConfiguration.RegisteredDeliveryValue" value="IntermediateNotification" />
+    <add key="SmppConfiguration.UseSeparateConnections" value="true" />
 
   </appSettings>
   <system.diagnostics>
