--- a/common.props
+++ b/common.props
@@ -1,7 +1,7 @@
 <Project>
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
-    <Version>1.9.1</Version>
+    <Version>1.10.0</Version>
     <NoWarn>$(NoWarn);CS1591</NoWarn>
     <PackageProjectUrl>https://github.com/AdhamAwadhi/JamaaSMPP/</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
@@ -24,10 +24,12 @@
     <AssemblyVersion>$(Version)</AssemblyVersion>
     <FileVersion>$(Version)</FileVersion>
     <PackageReleaseNotes>
-      v$(CurrentVersion)
+		v1.10.0
 
-      - LoggingExtensions.DumpStringWithTry
-    </PackageReleaseNotes>
+		- Improve SmppClient to respect AddressNPI and AddressTON for Source Addresses
+		- (fix) Fallback Source to Config Value
+		- Bump .Net Versions
+	</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup>
