--- a/JamaaTech.SMPP.Net.Lib/Smpp.Net.Lib.csproj
+++ b/JamaaTech.SMPP.Net.Lib/Smpp.Net.Lib.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\common.props" />
   
   <PropertyGroup>
-    <TargetFrameworks>net48;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net40;net48;netstandard2.0</TargetFrameworks>
     <AssemblyName>JamaaTech.Smpp.Net.Lib</AssemblyName>
   </PropertyGroup>
 
