--- a/JamaaTech.Smpp.Net.Client/Smpp.Net.Client.csproj
+++ b/JamaaTech.Smpp.Net.Client/Smpp.Net.Client.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\common.props" />
 
   <PropertyGroup>
-    <TargetFrameworks>net48;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net40;net48;netstandard2.0</TargetFrameworks>
     <AssemblyName>JamaaTech.Smpp.Net.Client</AssemblyName>
     <PackageId>JamaaSMPP</PackageId>
     <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
