Refactor SMPP client code into cleaner C# 8.0 syntax
Refactored the code of the SMPP client to match C# 8.0 syntax style. This improvement includes the usage of null coalescing operators, conversion of properties into expressions-bodied form, the removal of unnecessary semicolons and redundant type specifications, and the consolidation of namespace declarations. These changes make the code cleaner, more readable, and adhere to modern C# coding standards.

--- a/JamaaTech.Smpp.Net.Client/Smpp.Net.Client.csproj
+++ b/JamaaTech.Smpp.Net.Client/Smpp.Net.Client.csproj
@@ -7,6 +7,7 @@
     <AssemblyName>JamaaTech.Smpp.Net.Client</AssemblyName>
     <PackageId>JamaaSMPP</PackageId>
     <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
+    <RootNamespace>JamaaTech.Smpp.Net.Client</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Release' ">
